Code Rabbit Refactoring applied.