@@ -5,6 +5,7 @@ import static org.mockito.Mockito.*;
 
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
+import java.lang.reflect.Method;
 import java.nio.file.AccessDeniedException;
 import java.time.LocalDateTime;
 import java.util.Collections;
@@ -58,199 +59,183 @@ class GlobalExceptionHandlerTest {
 
     @Test
     void handleCustomException_ShouldReturnCorrectResponse() {
-        // Arrange
-        CustomException exception = new CustomException("Custom error", HttpStatus.BAD_REQUEST);
-
-        // Act
+        CustomException exception =
+                new CustomException("Custom error", HttpStatus.BAD_REQUEST, ErrorCode.INVALID_REQUEST);
         ResponseEntity<Object> response = exceptionHandler.handleCustomException(exception, webRequest);
 
-        // Assert
         assertNotNull(response);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         ApiErrorResponse error = (ApiErrorResponse) response.getBody();
         assertNotNull(error);
         assertEquals("Custom error", error.getMessage());
         assertEquals(HttpStatus.BAD_REQUEST.value(), error.getStatus());
+        assertEquals(ErrorCode.INVALID_REQUEST.name(), error.getCode());
+        assertEquals(ErrorCode.INVALID_REQUEST.getSuggestion(), error.getSuggestion());
         assertTrue(error.getTimestamp().isBefore(LocalDateTime.now().plusSeconds(1)));
     }
 
     @Test
-    void handleMethodArgumentNotValid_ShouldReturnCorrectResponse() {
-        // Arrange
-        MethodParameter parameter = mock(MethodParameter.class);
+    void handleMethodArgumentNotValid_ShouldReturnCorrectResponse() throws Exception {
+        Method method = getClass().getDeclaredMethod("setUp");
+        MethodParameter parameter = new MethodParameter(method, -1);
+
         MethodArgumentNotValidException ex = new MethodArgumentNotValidException(parameter, bindingResult);
         FieldError fieldError = new FieldError("object", "field", "defaultMessage");
         when(bindingResult.getFieldErrors()).thenReturn(List.of(fieldError));
         when(bindingResult.getGlobalErrors()).thenReturn(Collections.emptyList());
 
-        // Act
         ResponseEntity<Object> response = exceptionHandler.handleMethodArgumentNotValid(
                 ex, new HttpHeaders(), HttpStatus.BAD_REQUEST, webRequest);
 
-        // Assert
         assertNotNull(response);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         ApiErrorResponse error = (ApiErrorResponse) response.getBody();
         assertNotNull(error);
-        assertEquals("Validation Failed", error.getMessage());
+        assertEquals("Validation failed. Please check the provided data.", error.getMessage());
+        assertEquals(ErrorCode.INVALID_REQUEST.name(), error.getCode());
+        assertEquals(ErrorCode.INVALID_REQUEST.getSuggestion(), error.getSuggestion());
         assertTrue(error.getDetails().contains("field: defaultMessage"));
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     void handleMethodArgumentTypeMismatch_ShouldReturnCorrectResponse() {
-        // Arrange
         MethodArgumentTypeMismatchException ex = mock(MethodArgumentTypeMismatchException.class);
         when(ex.getName()).thenReturn("paramName");
         when(ex.getRequiredType()).thenAnswer(invocation -> Integer.class);
 
-        // Act
         ResponseEntity<Object> response = exceptionHandler.handleMethodArgumentTypeMismatch(ex, webRequest);
 
-        // Assert
         assertNotNull(response);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         ApiErrorResponse error = (ApiErrorResponse) response.getBody();
         assertNotNull(error);
-        assertEquals("paramName should be of type java.lang.Integer", error.getMessage());
+        assertEquals("The parameter 'paramName' must be a valid Integer", error.getMessage());
+        assertEquals(ErrorCode.INVALID_PARAMETER_TYPE.name(), error.getCode());
+        assertEquals(ErrorCode.INVALID_PARAMETER_TYPE.getSuggestion(), error.getSuggestion());
     }
 
     @Test
     void handleConstraintViolation_ShouldReturnCorrectResponse() {
-        // Arrange
         @SuppressWarnings("unchecked")
         ConstraintViolation<Object> mockViolation = mock(ConstraintViolation.class);
-
-        // Create a mock Path that returns a known string representation
         jakarta.validation.Path mockPath = mock(jakarta.validation.Path.class);
         when(mockPath.toString()).thenReturn("fieldName");
         when(mockViolation.getPropertyPath()).thenReturn(mockPath);
         when(mockViolation.getMessage()).thenReturn("must not be null");
 
-        // Create a new mutable set with our mock violation
         Set<ConstraintViolation<?>> violations = new HashSet<>();
         violations.add(mockViolation);
-
-        // Create the exception with our violations
         ConstraintViolationException ex = new ConstraintViolationException(violations);
 
-        // Act
         ResponseEntity<Object> response = exceptionHandler.handleConstraintViolation(ex, webRequest);
 
-        // Assert
         assertNotNull(response);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         ApiErrorResponse error = (ApiErrorResponse) response.getBody();
         assertNotNull(error);
-        assertEquals("Constraint Violation", error.getMessage());
-
-        // Verify the details contain our violation
-        List<String> details = error.getDetails();
-        assertNotNull(details);
-        assertTrue(details.stream().anyMatch(detail -> detail.contains("fieldName: must not be null")));
+        assertEquals("Validation constraints violated. Please check your input.", error.getMessage());
+        assertEquals(ErrorCode.CONSTRAINT_VIOLATION.name(), error.getCode());
+        assertEquals(ErrorCode.CONSTRAINT_VIOLATION.getSuggestion(), error.getSuggestion());
+        assertTrue(error.getDetails().stream().anyMatch(detail -> detail.contains("fieldName: must not be null")));
     }
 
     @Test
     void handleMissingServletRequestParameter_ShouldReturnCorrectResponse() {
-        // Arrange
         MissingServletRequestParameterException ex = new MissingServletRequestParameterException("param", "String");
 
-        // Act
         ResponseEntity<Object> response = exceptionHandler.handleMissingServletRequestParameter(
                 ex, new HttpHeaders(), HttpStatus.BAD_REQUEST, webRequest);
 
-        // Assert
         assertNotNull(response);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         ApiErrorResponse error = (ApiErrorResponse) response.getBody();
         assertNotNull(error);
-        assertEquals("param parameter is missing", error.getMessage());
+        assertEquals("The required parameter 'param' is missing", error.getMessage());
+        assertEquals(ErrorCode.MISSING_PARAMETER.name(), error.getCode());
+        assertEquals(ErrorCode.MISSING_PARAMETER.getSuggestion(), error.getSuggestion());
     }
 
     @Test
     void handleAccessDenied_ShouldReturnCorrectResponse() {
-        // Arrange
         AccessDeniedException ex = new AccessDeniedException("Access denied");
 
-        // Act
         ResponseEntity<Object> response = exceptionHandler.handleAccessDeniedException(ex, webRequest);
 
-        // Assert
         assertNotNull(response);
         assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode());
         ApiErrorResponse error = (ApiErrorResponse) response.getBody();
         assertNotNull(error);
-        assertEquals("Access denied", error.getMessage());
+        assertEquals("You don't have permission to access this resource", error.getMessage());
+        assertEquals(ErrorCode.ACCESS_DENIED.name(), error.getCode());
+        assertEquals(ErrorCode.ACCESS_DENIED.getSuggestion(), error.getSuggestion());
     }
 
     @Test
     void handleNoHandlerFound_ShouldReturnCorrectResponse() {
-        // Arrange
         NoHandlerFoundException ex = new NoHandlerFoundException("GET", "/test", new HttpHeaders());
 
-        // Act
         ResponseEntity<Object> response =
                 exceptionHandler.handleNoHandlerFoundException(ex, new HttpHeaders(), HttpStatus.NOT_FOUND, webRequest);
 
-        // Assert
         assertNotNull(response);
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
         ApiErrorResponse error = (ApiErrorResponse) response.getBody();
         assertNotNull(error);
-        assertTrue(error.getMessage().contains("No handler found for GET /test"));
+        assertEquals("The requested resource '/test' was not found", error.getMessage());
+        assertEquals(ErrorCode.RESOURCE_NOT_FOUND.name(), error.getCode());
+        assertEquals(ErrorCode.RESOURCE_NOT_FOUND.getSuggestion(), error.getSuggestion());
     }
 
     @Test
     void handleHttpRequestMethodNotSupported_ShouldReturnCorrectResponse() {
-        // Arrange
         HttpRequestMethodNotSupportedException ex =
                 new HttpRequestMethodNotSupportedException("POST", Collections.singletonList("GET"));
 
-        // Act
         ResponseEntity<Object> response = exceptionHandler.handleHttpRequestMethodNotSupported(
                 ex, new HttpHeaders(), HttpStatus.METHOD_NOT_ALLOWED, webRequest);
 
-        // Assert
         assertNotNull(response);
         assertEquals(HttpStatus.METHOD_NOT_ALLOWED, response.getStatusCode());
         ApiErrorResponse error = (ApiErrorResponse) response.getBody();
         assertNotNull(error);
-        assertTrue(error.getMessage().contains("POST method is not supported"));
+        assertEquals("The POST method is not supported. Supported methods are: GET", error.getMessage());
+        assertEquals(ErrorCode.METHOD_NOT_ALLOWED.name(), error.getCode());
+        assertEquals(ErrorCode.METHOD_NOT_ALLOWED.getSuggestion(), error.getSuggestion());
     }
 
     @Test
     void handleHttpMediaTypeNotSupported_ShouldReturnCorrectResponse() {
-        // Arrange
-        List<MediaType> supportedMediaTypes = Collections.singletonList(MediaType.APPLICATION_JSON);
+        List<MediaType> supportedTypes = List.of(MediaType.APPLICATION_JSON);
         HttpMediaTypeNotSupportedException ex =
-                new HttpMediaTypeNotSupportedException("Unsupported media type", supportedMediaTypes);
+                new HttpMediaTypeNotSupportedException(MediaType.TEXT_PLAIN, supportedTypes);
 
-        // Act
         ResponseEntity<Object> response = exceptionHandler.handleHttpMediaTypeNotSupported(
                 ex, new HttpHeaders(), HttpStatus.UNSUPPORTED_MEDIA_TYPE, webRequest);
 
-        // Assert
         assertNotNull(response);
         assertEquals(HttpStatus.UNSUPPORTED_MEDIA_TYPE, response.getStatusCode());
         ApiErrorResponse error = (ApiErrorResponse) response.getBody();
         assertNotNull(error);
-        assertNotNull(error.getMessage());
+        assertTrue(error.getMessage().contains(MediaType.TEXT_PLAIN.toString()));
+        assertTrue(error.getMessage().contains(MediaType.APPLICATION_JSON.toString()));
+        assertEquals(ErrorCode.UNSUPPORTED_MEDIA_TYPE.name(), error.getCode());
+        assertEquals(ErrorCode.UNSUPPORTED_MEDIA_TYPE.getSuggestion(), error.getSuggestion());
     }
 
     @Test
     void handleAllUncaughtException_ShouldReturnCorrectResponse() {
-        // Arrange
         Exception ex = new RuntimeException("Unexpected error");
 
-        // Act
         ResponseEntity<Object> response = exceptionHandler.handleAllUncaughtException(ex, webRequest);
 
-        // Assert
         assertNotNull(response);
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
         ApiErrorResponse error = (ApiErrorResponse) response.getBody();
         assertNotNull(error);
-        assertEquals("An unexpected error occurred", error.getMessage());
-        assertTrue(error.getDetails().contains("Error: Unexpected error"));
+        assertEquals(
+                "An unexpected error occurred. Please try again later or contact support if the problem persists.",
+                error.getMessage());
+        assertEquals(ErrorCode.INTERNAL_ERROR.name(), error.getCode());
+        assertEquals(ErrorCode.INTERNAL_ERROR.getSuggestion(), error.getSuggestion());
     }
 }
